- Moved the Shared Preferences Notification Key from HomeActivity.promptNotification to UserActivity.keyNotification - Added a spare button to Course Dialog. Now no dialog is shown, asking the user if this is a spare or not - Fixed issue in Clubs that caused the edited club contents to reset back temporarily during permission prompting

--- a/app/src/main/res/layout/announcement_activity.xml
+++ b/app/src/main/res/layout/announcement_activity.xml
@@ -98,7 +98,7 @@
 
                 <!-- Date Button -->
                 <Button
-                    style="@style/LyonsButtonStyle"
+                    style="@style/LyonsButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -127,7 +127,7 @@
 
                 <!-- Time Button -->
                 <Button
-                    style="@style/LyonsButtonStyle"
+                    style="@style/LyonsButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -195,7 +195,7 @@
 
                 <!-- Approval/Unlock Button -->
                 <Button
-                    style="@style/LyonsButtonStyle"
+                    style="@style/LyonsButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -206,7 +206,7 @@
 
                 <!-- Submit Button -->
                 <Button
-                    style="@style/LyonsButtonStyle"
+                    style="@style/LyonsButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
