--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -197,7 +197,7 @@
 
             <!-- Pull-up Toggle Button -->
             <Button
-                style="@style/LyonsButtonStyle"
+                style="@style/LyonsButton"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
                 android:layout_centerHorizontal="true"
