--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <item name="android:textColorPrimary">@color/accent</item>
     </style>
 
+    <!-- App Themes -->
     <style name="LyonsToolBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -42,7 +43,7 @@
         <item name="android:background">@color/cellEvent</item>
     </style>
 
-    <style name="LyonsButtonStyle">
+    <style name="LyonsButton">
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:minHeight">0dp</item>
@@ -51,6 +52,13 @@
         <item name="android:layout_marginLeft">0dp</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:textColor">@color/accent</item>
+    </style>
+
+    <style name="LyonsFilledButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:textColor">@color/whiteText</item>
     </style>
 
     <!-- SplashScreen Theme, must be a theme to be a splash -->
@@ -191,7 +199,7 @@
         <item name="android:textColor">@color/whiteText</item>
     </style>
 
-    <style name="ExtraButtonStyle" parent="LyonsButtonStyle">
+    <style name="ExtraButtonStyle" parent="LyonsButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">10dp</item>
